# DRONE_Tools

./: .gitignore  .gitmodules  WriteNavData.m  plotFlightData.m
EKF/: CMakeLists.txt
EKF/.cache/clangd/index/: EKF.cpp.860A21EF36FD1977.idx  EKF.h.0B850F7FF8E527DF.idx  nav-functions.cpp.034534F7DBCD8482.idx  nav-functions.h.66342BB9A50A9E05.idx  runEKF.cpp.513106166C3A473A.idx
EKF/apps/: runEKF.cpp
EKF/include/: EKF.h  nav-functions.h  readNavData.h
EKF/lib/: CMakeLists.txt
EKF/lib/eigencsv/: CMakeLists.txt  eigencsv.h
EKF/scripts/: EvalEKFOutput.asv  EvalEKFOutput.m  WriteNavData.m
EKF/src/: CMakeLists.txt  EKF.cpp  readNavData.cpp
EKFInputs/: flight_data13_processed.csv  flight_data13_processed_bmi088.csv
EKFOutputs/: measurementAvail.csv  stateEstimate.csv  systemTime_us.csv
